
2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: new URL for NIST suite, using https

2017-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: adjustments after merge from reportwriter
	* report.pl: retro-fixed RW301 and RW302 to be comp_only
	* RW.txt, summary.txt, summarynoix.txt: adjusted expected results

2017-09-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.module.in: (new file) moved content of generated
	  Makefiles to separate template file;
	  splitted into multiple targets and all target
	* Makefile.am: adjusted to `sed` the template instead of
	  using `echo` to create the module Makefile

2017-09-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: extra target for summary.log

2017-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: use $COBC defined in atlocal instead of "cobc";
	  passing hints for valgrind logfile name when sourcing atlocal

2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* report.pl: activated runtime checks where possible to prevent
	  loops and hard aborts for not-working environments, for example
	  when running ISAM tests with a no-ISAM build

2017-07-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added some hacks for make not supporting $> and $(D>),
	  make tests works there (again) as long as newcob.val is in builddir

2017-06-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: separated rule for newcob.val.Z and make sure that
	  out-of-path newcob.val.Z is copied before uncompress;
	  corrected rule for EXEC85 to include executable extension

2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file
	* Makefile.am: fixing tests with newcob.val in all possible VPATH